# libqgit2

./: .gitignore  CMakeExtra.txt  CMakeLists.txt  README.rst  qtpackage.toml  update.sh
